Initial Setup - HTML structure,basic CSS, json server

--- a/project.json
+++ b/project.json
@@ -1,40 +1,3 @@
 {
-  "Characters": {
-    "Teacher": {
-      "Happy": "images/kuruhappy.png",
-      "Thinking": "images/kuruthink.png",
-      "Angry": "images/kuruangry.png"
-    },
-    "Yuka": {
-      "Happy": "images/kuruhappy.png",
-      "Thinking": "images/kuruthink.png",
-      "Angry": "images/kuruangry.png"
-    },
-    "Mimi": {
-      "Happy": "images/kuruhappy.png",
-      "Thinking": "images/kuruthink.png",
-      "Angry": "images/kuruangry.png"
-    },
-    "Jaya": {
-      "Happy": "images/kuruhappy.png",
-      "Thinking": "images/kuruthink.png",
-      "Angry": "images/kuruangry.png"
-    },
-    "Kansen": {
-      "Happy": "images/kuruhappy.png",
-      "Thinking": "images/kuruthink.png",
-      "Angry": "images/kuruangry.png"
-    }
-  },
-
-  "Scene 1": {
-    "Background": "https://#",
-    "PAGES": {
-      "Page0": {
-        "Character": "???",
-        "Sprite": "Happy",
-        "PageText": "Welcome to our University."
-      }
-    }
-  }
+  "homepage": "index.html"
 }
